--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body {
 
 
 .container {
-  border: 1px solid white;
   border-radius: 10px;
   width: 375px;
   background-color: var(--dark-grayish-blue);
@@ -58,15 +57,21 @@ body {
 }
 
 #btn-nueva-cita {
-  width: 75px;
-  height: 75px;
+  width: 60px;
+  height: 60px;
   border: none;
   border-radius: 50%;
   margin-top: 50px;
   background-color: var(--neon-green);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+#btn-nueva-cita:hover {
+  box-shadow: 0px 0px 20px var(--neon-green);
+}
 
 
 @media (min-width: 900px) {
