--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
 
 :root {
   /* COLOR *
@@ -14,7 +14,6 @@
   /* ? FONTS */
   --ff-manrope: "Manrope", sans-serif;
 }
-
 
 * {
   margin: 0;
@@ -37,23 +36,32 @@ body {
   background-color: var(--dark-blue);
 }
 
-
 .container {
   border-radius: 10px;
-  width: 375px;
+  width: 300px;
   background-color: var(--dark-grayish-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #advice-id {
   color: var(--neon-green);
   letter-spacing: 0.25rem;
-  padding: 15px 0;
+  padding-top: 35px;
 }
 
-#advice-text {
+.advice-text {
   color: white;
   font-size: 2rem;
   padding: 25px 20px;
+}
+
+.pattern-divider {
+  height: 20px;
+  width: 85%;
+  background: url(./images/pattern-divider-desktop.svg) no-repeat center center / contain;
 }
 
 #btn-nueva-cita {
@@ -61,23 +69,22 @@ body {
   height: 60px;
   border: none;
   border-radius: 50%;
-  margin-top: 50px;
+  margin-top: 10px;
   background-color: var(--neon-green);
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  top: 30px;
 }
 
 #btn-nueva-cita:hover {
   box-shadow: 0px 0px 20px var(--neon-green);
 }
 
-
 @media (min-width: 900px) {
-
-
-
-
-
+  .container {
+    width: 375px;
+  }
 }
